syntax = "proto3";

package ProjectName;
option csharp_namespace = "ProjectName";

service Core {
  rpc Echo (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
